# agent-coder

./: README.md  polytope.yml
templates/: polytope.yml
templates/agent-dashboard/: README.md  package.json  polytope.yml
templates/agent-dashboard/app/: root.tsx  routes.ts
templates/agent-dashboard/app/components/: AppLayout.tsx  EventLog.tsx  ExecuteForm.tsx  ExecutionHistory.tsx  ToolsList.tsx
templates/agent-dashboard/app/lib/: agentClient.ts  callStore.ts
templates/agent-dashboard/app/routes/: agents.$agentName.tsx  dashboard.tsx  home.tsx
templates/agent-management-ui/: README.md  package.json  polytope.yml
templates/agent-management-ui/app/components/: AgentCard.tsx  AgentGrid.tsx  AgentSidebar.tsx  AppLayout.tsx  Breadcrumb.tsx  ErrorState.tsx  EventCard.tsx  ExecuteForm.tsx  ExecutionCard.tsx  ExecutionHeader.tsx  ExecutionLogSection.tsx  ExecutionStats.tsx  ExecutionViewer.tsx  InputSchemaDisplay.tsx  LoadingState.tsx  SchemaDisplay.tsx  SchemaForm.tsx
templates/agent-management-ui/app/lib/: agentClient.ts  callStore.ts
templates/agent-management-ui/app/routes/: _index.tsx  agents.$agentName.calls.$callId.tsx  agents.$agentName.execute.tsx  agents.$agentName.tsx  splat.tsx
templates/agent-management-ui/lib/: agentClient.ts
templates/agent-server/: README.md  polytope.yml  pyproject.toml
templates/agent-server/tests/: __init__.py  test_agents.py
templates/python-agent-api/: README.md  polytope.yml  pyproject.toml
templates/python-agent-api/src/backend/: conf.py  eval.py  init.py  main.py  registry.py
templates/python-agent-api/src/backend/agents/: __init__.py  example_agents.py
templates/python-agent-api/src/backend/clients/: __init__.py  redis.py
templates/python-agent-api/src/backend/db/: models.py
templates/python-agent-api/src/backend/models/: calls.py  utils.py
templates/python-agent-api/src/backend/repositories/: calls.py  postgres_calls.py
templates/python-agent-api/src/backend/routes/: __init__.py  agents.py  calls.py  events.py
templates/python-agent-api/src/backend/tools/: __init__.py  example_tools.py
templates/python-agent-api/src/backend/utils/: agent_utils.py
templates/python-agent-api/src/scripts/: __init__.py  demo.py
templates/python-agent-api/tests/: test_agents.py
(+35 files in other folders)
