[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.116.1",
    "httpx>=0.28.1",
    "opper-agent-sdk",
    "opperai>=0.3.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.6.0",
    "pytest>=7.0.0",
    "rich>=13.7.0",
    "ruff>=0.1.0",
    "sqlmodel>=0.0.24",
    "typing-extensions>=4.9.0",
    "uvicorn[standard]==0.35.0",
    "websockets>=12.0",
]

[project.scripts]
app = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
opper-agent-sdk = { path = "../lib/py/opper-agent-sdk", editable = true }
